test/corpus/comments.txt
=======
Comment
=======

/* a comment */

---

(grammar (comment))

=====================
Comment in production
=====================

character = /* any unicode character */ .

---

(grammar 
  (production
    name: (terminal_identifier)
    (comment)))
